# AlpacaBot

./: .env.example  .gitignore  README.md  pyproject.toml
src/trading_bot/: __init__.py  alpaca_client.py  analysis.py  cli.py  config.py  databento_client.py  gex_client.py  market_data.py  options_analysis.py  options_replay.py  storage.py  technicals.py  web_app.py
src/trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/trading_bot/static/: app.js  index.html  styles.css
tests/: test_alpaca_client.py  test_analysis.py  test_config.py  test_databento_client.py  test_gex_client.py  test_options_analysis.py  test_options_replay.py  test_storage.py  test_technicals.py  test_web_app.py
